--- a/package.json
+++ b/package.json
@@ -1,24 +1,41 @@
 {
     "name": "kryptopus-candlestick",
     "description": "Candlestick entity",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "author": "neolao <contact@neolao.com>",
     "repository": "https://github.com/kryptopus/candlestick.git",
     "license": "MIT",
     "files": [
-        "Candlestick.js"
+        "src",
+        "lib"
     ],
-    "main": "Candlestick.js",
+    "main": "lib/Candlestick.js",
     "engines": {
         "node": ">= 9"
     },
     "devDependencies": {
+        "babel-cli": "^6.7",
+        "babel-preset-solfege": "^1.1.2",
         "eslint": "^3.19",
-        "eslint-plugin-solfege": "^1.0"
+        "eslint-plugin-solfege": "^1.0",
+        "flow-bin": "^0.60.1",
+        "watch": "^1.0.2"
     },
     "scripts": {
-        "lint": "eslint --ext .js .",
-        "prepare": "npm run lint"
+        "flow-stop": "flow stop",
+        "flow-start": "flow start",
+        "flow-restart": "flow stop && flow start",
+        "lint": "eslint --ext .js src",
+        "prepare": "npm run lint && npm run build",
+        "prebuild": "npm run lint && flow",
+        "build": "babel --out-dir lib src --copy-files",
+        "watch": "watch 'echo \"----------\"; npm run build --silent' ./src"
+    },
+    "babel": {
+        "presets": [
+            "solfege"
+        ],
+        "comments": false
     },
     "eslintConfig": {
         "extends": [
